--- a/styles.css
+++ b/styles.css
@@ -3,14 +3,6 @@ body{
 
 }
 
-h1{
-    font-size: 4.5em;
-}
-
-p{
-    font-size: 2em;
-}
-
 a {
     color: #fff;
     text-decoration: none;
@@ -20,26 +12,42 @@ a:hover{
     color: #545454;
     text-decoration: none; 
 }
-
-#header{
-    height: 100vh;
-    background-image: linear-gradient(
-                     rgba(20,20,20, .5), 
-                     rgba(20,20,20, .5)), url(images/Tracy_Caldwell_Dyson_in_Cupola_ISS.jpg);
-    background-size: cover;
-    position: relative;
+section{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 100px 80px;
 }
 
-#intro-text{
+.hero{
+    position: relative;
+    justify-content: center;
     text-align: center;
-    color: #fff;
+    min-height: 100vh;
+}
+
+.hero .background-image{
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    border: 2px solid #fff;
-    padding: 50px;
-    margin: 0 auto;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    z-index: -1;
+    background-color: #80a3db;
+}
+
+.hero h1{
+    margin-bottom: 15px;
+}
+
+.hero h3{
+    font: normal 28px "Open Sans", sans-serif;
+    margin-bottom: 40px;
+}
+
+.hero-content{
+    color: #fff;
 }
 
 
@@ -52,7 +60,7 @@ a:hover{
 
 #map { 
     height: 450px;
-    width: 60%;
+    width: 70%;
     margin: 0 auto;
     text-align: center;
     padding: 15px;
