--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,11 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body{
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Open Sans', sans-serif;
 
 }
 
@@ -48,10 +54,28 @@ section{
 
 .hero-content{
     color: #fff;
+    animation: 1s fadein 1s forwards;
+    opacity: 0;
+    font-size: 30px;
 }
 
+@keyframes fadein{
+    100%{
+        opacity: 1;
+    }
+}
 
-#maps  {
+#color-overlay{
+    position: absolute;
+   top: 0;
+   left: 0;
+   width: 100%;
+   height: 100%;
+   background-color: black;
+   opacity: 0.6;
+}
+
+.maps  {
     background: black;
     padding: 100px;
     text-align: center;
@@ -80,9 +104,13 @@ section{
     font-size: 2em;
 }
 
-#crew{
+.crew{
     padding: 100px;
     text-align: center;
+}
+
+.crew h1{
+    font-size: 2em;
 }
 
 #number{
@@ -101,7 +129,7 @@ section{
     padding: 30px;
 }
 
-#footer{
+footer{
     background: black;
     text-align: center;
     padding: 150px;
@@ -120,11 +148,12 @@ section{
 #footer-icons li{
     list-style: none;
     display: inline-block;
-    font-size: 2em;
+    font-size: 30px;
     padding: 15px;
 }
 
 #footer-text{
     margin: 0 auto;
     width: 50%;
+    font-size: 20px;
 }
