--- a/styles.css
+++ b/styles.css
@@ -57,6 +57,8 @@ section{
     animation: 1s fadein 1s forwards;
     opacity: 0;
     font-size: 30px;
+    border: 2px solid #fff;
+    padding: 35px;
 }
 
 @keyframes fadein{
